--- a/index.html
+++ b/index.html
@@ -23,6 +23,53 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>   
+        <span>Smart watches for kids</span>
+    </header>  
+    <main>
+        <section id="home">
+            <h1>Any case. Any band. Any style you want.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+        </section>
+        <section id="features">
+            <h3>Features</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+            dolor in hendrerit in vulputate velit esse molestie consequat,
+            vel illum dolore eu feugiat nulla facilisis at vero eros et
+            accumsan et iusto odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
+            </p>
+            <h3>Specs</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
+            laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet
+            dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus
+            possimus eos.</p>
+        </section>
+        <section id="products">
+            <h3>Our Products</h3>
+            
+        </section>
+        <section id="video">
+            <h3>Video</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5bvcyIV4yzo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        <section id="feedback">
+            <h3>What our clients say</h3>
+            <img src="img/client.jpg" alt="client">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+            dolor in hendrerit in vulputate velit esse molestie consequat,
+            vel illum dolore eu feugiat nulla facilisis at vero eros et
+            accumsan et iusto odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
+            </p>
+        </section>
+    </main> 
 </body>
 </html>
