--- a/index.html
+++ b/index.html
@@ -32,21 +32,10 @@
         </section>
         <section id="features">
             <h3>Features</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-            dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et
-            accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.
             </p>
             <h3>Specs</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
-            laudantium placeat similique corporis ex! Iure, fugiat, iste eveniet
-            dolore illo est sit quisquam. Quam, perferendis, deserunt ipsum temporibus
-            possimus eos.</p>
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
         </section>
         <section id="products">
             <h3>Our Products</h3>
@@ -59,15 +48,7 @@
         <section id="feedback">
             <h3>What our clients say</h3>
             <img src="img/client.jpg" alt="client">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-            quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-            dolor in hendrerit in vulputate velit esse molestie consequat,
-            vel illum dolore eu feugiat nulla facilisis at vero eros et
-            accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.
             </p>
         </section>
     </main> 
