--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="home">
             <h1>Any case. Any band. Any style you want.</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
         </section>
         <section id="features">
             <h3>Features</h3>
@@ -39,17 +39,19 @@
         </section>
         <section id="products">
             <h3>Our Products</h3>
-            
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
         </section>
         <section id="video">
             <h3>Video</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/5bvcyIV4yzo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section id="feedback">
-            <h3>What our clients say</h3>
-            <img src="img/client.jpg" alt="client">
-            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.
+        <section id="FAQ">
+            <h3>Frequently Asked Questions</h3>
+            <p>How can I get refund?
             </p>
+        </section>
+        <section id="contact">
+            <h3>Contact Us</h3>
         </section>
     </main> 
 </body>
