--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
  <header>
         <div id="logo">
-           <span><a href="index.html">Be Smart</a></span> 
+           <span><a href="index.html">Be Smart</a></span>
+           <span>Smart watches for kids</span> 
         </div>
         <nav>
             <ul>
@@ -23,35 +24,37 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <span>Smart watches for kids</span>
     </header>  
     <main>
         <section id="home">
             <h1>Any case. Any band. Any style you want.</h1>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
+        <div class="hero-item">
+            <img class="moc-animation" src="img/watch-4.png" alt="Smart watch white">
+        </div>
         </section>
         <section id="features">
-            <h3>Features</h3>
+            <h2>Features</h2>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.
             </p>
-            <h3>Specs</h3>
+            <h2>Specs</h2>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
         </section>
         <section id="products">
-            <h3>Our Products</h3>
+            <h2>Our Products</h2>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
         </section>
         <section id="video">
-            <h3>Video</h3>
+            <h2>Video</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/5bvcyIV4yzo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section id="FAQ">
-            <h3>Frequently Asked Questions</h3>
+            <h2>Frequently Asked Questions</h2>
             <p>How can I get refund?
             </p>
         </section>
         <section id="contact">
-            <h3>Contact Us</h3>
+            <h2>Contact Us</h2>
         </section>
     </main> 
 </body>
