--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <header>
         <div id="logo">
            <span><a href="index.html">Be Smart</a></span>
-           <sp>Smart watches for kids</p> 
+           <p>Smart watches for kids</p> 
         </div>
         <nav>
             <ul class="top-menu">
@@ -22,8 +22,12 @@
                 <li><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
+        <div class="banner">
+			<button class="button">Shop now</button>
+		</div>
     </header>  
     <main>
+    
         <section id="home">
             <h1>Any case. Any band. Any style you want.</h1>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
