--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
  <header>
         <div id="logo">
-           <span><a href="index.html">Be Smart</a></span>
-           <p>Smart watches for kids</p> 
+           <a href="index.html">Be Smart</a>
         </div>
         <nav>
             <ul class="top-menu">
@@ -50,12 +49,14 @@
         </section>
         <section id="faq">
             <h2>Frequently Asked Questions</h2>
-            <p>How can I get refund?
-            </p>
+            <p>How can I get refund?</p>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
+            <form></form>
         </section>
     </main> 
+    <footer>
+    </footer>
 </body>
 </html>
