Add Bootstrap script

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="wartch-promo">
             <img class="main-watch" src="img/watch-4.png" alt="Smart watch white">
         </div>
+        <p id="demo"></p>
         </section>
         <section id="features">
             <h2>Features</h2>
@@ -58,6 +59,7 @@
     </main> 
     <footer>
     </footer>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
