--- a/index.html
+++ b/index.html
@@ -1,19 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Be Smart!</title>
 </head>
+
 <body>
- <header>
-        <nav>
-        <div id="logo">
-           <a href="index.html">Be Smart</a>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Be Smart</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#features">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#products">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#video">Video</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#faq" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            FAQ
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Testimonial</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Contact</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div id="carouselProducts" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselProducts" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselProducts" data-slide-to="1"></li>
+                <li data-target="#carouselProducts" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/watch-1.png" class="d-block w-100" alt="Watch-grey">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/watch-2.png" class="d-block w-100" alt="watch-pink">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/watch-3.png" class="d-block w-100" alt="watch-black">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/watch-4.png" class="d-block w-100" alt="watch-white">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselProducts" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselProducts" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
+
+        <!-- <nav>
+            <div id="logo">
+                <a href="index.html">Be Smart</a>
+            </div>
             <ul class="top-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#features">Features</a></li>
@@ -21,32 +88,77 @@
                 <li><a href="#video">Video</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
-        </nav>
+        </nav> 
         <div class="banner">
-			<button class="button">Shop now</button>
-		</div>
-    </header>  
-    <main>
+            <button class="btn btn-danger">Shop now</button>
+        </div>-->
+    </header>
+    <main class="container">
         <section id="home">
             <h1>Any case. Any band. Any style you want.</h1>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
-        <div class="wartch-promo">
-            <img class="main-watch" src="img/watch-4.png" alt="Smart watch white">
-        </div>
-        <p id="demo"></p>
+            <!-- <div class="wartch-promo">
+                <img class="main-watch" src="img/watch-4.png" alt="Smart watch white">
+            </div>-->
+            <p id="demo"></p>
         </section>
         <section id="features">
             <h2>Features</h2>
-            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required
+                for cellular service. Apple Watch and iPhone service provider must be the same. Not all service
+                providers support enterprise accounts; check with your employer and service provider. Roaming is not
+                available outside your carrier network coverage area. Contact your service provider for more details.
+                Check apple.com/watch/cellular for participating wireless carriers and eligibility.
             </p>
         </section>
         <section id="products">
             <h2>Our Products</h2>
-            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required for cellular service. Apple Watch and iPhone service provider must be the same. Not all service providers support enterprise accounts; check with your employer and service provider. Roaming is not available outside your carrier network coverage area. Contact your service provider for more details. Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
+            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required
+                for cellular service. Apple Watch and iPhone service provider must be the same. Not all service
+                providers support enterprise accounts; check with your employer and service provider. Roaming is not
+                available outside your carrier network coverage area. Contact your service provider for more details.
+                Check apple.com/watch/cellular for participating wireless carriers and eligibility.</p>
+
+            <div class="row"> 
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/watch-1.png" class="card-img-top" alt="Watch-grey">
+                    <div class="card-body">
+                        <h5 class="card-title">Smart Watch Grey</h5>
+                        <p class="card-text">Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/watch-2.png" class="card-img-top" alt="watch-pink">
+                    <div class="card-body">
+                        <h5 class="card-title">Smart Watch Pink</h5>
+                        <p class="card-text">Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/watch-3.png" class="card-img-top" alt="Watch-black">
+                    <div class="card-body">
+                        <h5 class="card-title">Smart Watch Black</h5>
+                        <p class="card-text">Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/watch-4.png" class="card-img-top" alt="Watch-white">
+                    <div class="card-body">
+                        <h5 class="card-title">Smart Watch White</h5>
+                        <p class="card-text">Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+            </div>
         </section>
         <section id="video">
             <h2>Video</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5bvcyIV4yzo?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5bvcyIV4yzo?controls=0" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </section>
         <section id="faq">
             <h2>Frequently Asked Questions</h2>
@@ -56,10 +168,39 @@
             <h2>Contact Us</h2>
             <form></form>
         </section>
-    </main> 
+    </main>
     <footer>
+        <div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="productInfoModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="productInfoModalLabel">Product Info</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/watch-1.png" class="card-img-top" alt="Watch-grey">
+                    <h5 class="card-title">Smart Watch Grey</h5>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </footer>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
