--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -34,20 +34,20 @@
                         <a class="nav-link" href="#video">Video</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#faq" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            FAQ
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          FAQ
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Testimonial</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Contact</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="#contact">Contact</a>
+                          <a class="dropdown-item" href="#testimonial">Testimonial</a>
                         </div>
-                    </li>
+                      </li>
                 </ul>
             </div>
         </nav>
-        <div id="carouselProducts" class="carousel slide" data-ride="carousel">
+        <div class="container">
+        <div class="row">
+        <div id="carouselProducts" class="carousel slide col" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselProducts" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselProducts" data-slide-to="1"></li>
@@ -55,16 +55,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/watch-1.png" class="d-block w-100" alt="Watch-grey">
+                    <img src="img/watch-4.png" class="d-block" alt="Watch-grey">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/watch-2.png" class="d-block w-100" alt="watch-pink">
+                    <img src="img/watch-2.png" class="d-block" alt="watch-pink">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/watch-3.png" class="d-block w-100" alt="watch-black">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/watch-4.png" class="d-block w-100" alt="watch-white">
+                    <img src="img/watch-1.png" class="d-block" alt="watch-white">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselProducts" role="button" data-slide="prev">
@@ -76,6 +73,16 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <div class="col">
+            <h1>Any case. Any band. Any style you want.</h1>
+            <p>The most advanced Apple Watch yet, featuring the Always-On Retina display, the ECG app, international emergency calling, fall detection, and a built‑in compass.</p>
+            <p id="demo"></p>
+            <p class="old-price">Old price $399</p>
+            <p>New price $299</p>
+            <button type="button" class="btn btn-warning">Buy</button>
+        </div>
+    </div>
+    </div>
         <!-- <nav>
             <div id="logo">
                 <a href="index.html">Be Smart</a>
@@ -93,14 +100,7 @@
         </div>-->
     </header>
     <main class="container">
-        <section id="home">
-            <h1>Any case. Any band. Any style you want.</h1>
-            <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later.</p>
-            <!-- <div class="wartch-promo">
-                <img class="main-watch" src="img/watch-4.png" alt="Smart watch white">
-            </div>-->
-            <p id="demo"></p>
-        </section>
+        
         <section id="features">
             <h2>Features</h2>
             <p>Apple Watch Series 5 requires an iPhone 6s or later with iOS 13 or later. Wireless service plan required
@@ -161,6 +161,10 @@
         </section>
         <section id="faq">
             <h2>Frequently Asked Questions</h2>
+            <p>How can I get refund?</p>
+        </section>
+        <section id="testimonial">
+            <h2>Testimonial</h2>
             <p>How can I get refund?</p>
         </section>
         <section id="contact">
